Fix: refactory convert-top and mixin gap

--- a/src/mixins/_display-flex.scss
+++ b/src/mixins/_display-flex.scss
@@ -7,7 +7,7 @@
 
 @mixin gap($gap) {
 	@if ($gap) {
-		grid: $gap;
+		gap: $gap;
 	}
 }
 
